fixJumpImage

--- a/src/index copy.css
+++ b/src/index copy.css
@@ -2,7 +2,7 @@
   height: 100%;
   position: relative;
   --white: #1161d2;
-  --primary: #0a6fdc;
+  --primary: #f59e0b;
   color: var(--white);
   font-size: 0.5rem; /* Cambia a 1rem como base */
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
@@ -11,18 +11,11 @@
 body,
 html {
   font-family: "Yatra One", system-ui;
-  /* height: 100vh; */
+  height: 100vh;
   color: var(--white);
   overflow: hidden;
   font-size: 0.5rem; /* Cambia a 1rem como base */
   font-weight: 400;
   font-style: normal;
   color: var(--white);
-  width: 100%;
-  height: 100%;
-  /* background-image: url("/src/img/w0.jpg");
-  background-size: cover;
-  background-repeat: no-repeat; */
-  padding: 0;
-  margin: 0;
 }
